# pycgmes

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_GOVERNANCE.md  README.md  REUSE.toml  Roadmap.md  SConstruct.py  SECURITY.md  SUPPORT.md  catalog-info.yaml  pyproject.toml
.github/workflows/: _core.yaml  _deploy.yaml  acc-prd.yaml  build.yaml  deploy.yaml  tst.yaml
.reuse/: dep5
LICENSES/: Apache-2.0.txt
SHACL/: Readme.md  __init__.py  pyproject.toml
SHACL/Common/: IdentifiedObjecStringLength.rdf
SHACL/CrossProfileValueType/: DL_453_cp_explicit.rdf  DL_453_cp_explicit.ttl  DY_457_cp_explicit.rdf  DY_457_cp_implicit.rdf  GL_13_cp_implicit.ttl  OP_452_cp_explicit.ttl  SC_452_cp.ttl  SV_456_cp_explicit.rdf  SV_456_cp_implicit.rdf  TP_456_cp_implicit.rdf
SHACL/IEC61968-13/: GL_13.rdf
SHACL/IEC61970-301UML/: EQBD_301UML.rdf  EQBD_301UML.ttl  OP_301UML.rdf  SC_301UML.rdf  SV_301UML.rdf  SV_301UML.ttl
SHACL/IEC61970-302UML/: DY_302UML.ttl
SHACL/IEC61970-452/: EQ_452.ttl  SC_452.rdf
SHACL/IEC61970-453/: DL_453.rdf
SHACL/IEC61970-456/: SSH_456.rdf  SV_456.rdf
SHACL/IEC61970-457/: DY_457.rdf  DY_457.ttl
SHACL/IEC61970-600-1/: All_600-1.rdf  EQ_600-1.rdf  EQ_600-1.ttl
SHACL/IEC61970-600-2/: EQ_600-2.rdf
SHACL/InverseAssocCardinality/: DYinv.rdf  EQinv.rdf  SVinv.rdf  TPinv.rdf  TPinv.ttl
SHACL/Main/: MainShape.rdf
SHACL/NotSolvedMAS/: DL_NotSolvedMAS_301UML.rdf  DL_NotSolvedMAS_301UML.ttl  DY_NotSolvedMAS_457.rdf  EQ_NotSolvedMAS_301UML.rdf  EQ_NotSolvedMAS_301UML.ttl  EQ_NotSolvedMAS_600.rdf  OP_NotSolvedMAS_452.rdf  SC_NotSolvedMAS_301UML.rdf  SSH_NotSolvedMAS_301UML.ttl  TP_NotSolvedMAS_301UML.rdf  TP_NotSolvedMAS_456.rdf
SHACL/RDFS/: CoreEquipmentProfile.rdf  CoreEquipmentProfile.ttl  EquipmentBoundaryProfile.rdf  FileHeaderProfile.rdf  GeographicalLocationProfile.rdf  OperationProfile.rdf  StateVariablesProfile.ttl  SteadyStateHypothesisProfile.rdf  TopologyProfile.ttl
SHACL/SolvedMAS/: SV_SolvedMAS_301UML.rdf  SolvedMAS_600-1.rdf  SolvedMAS_600-1.ttl  SolvedMAS_600-2.rdf
SHACL/datafiles/CrossProfileValueType/: DL_453_cp_implicit.rdf  GL_13_cp_implicit.rdf  TP_456_cp_explicit.rdf
SHACL/datafiles/IEC61970-301UML/: EQ_301UML.ttl  SC_301UML.ttl
SHACL/datafiles/IEC61970-452/: OP_452.rdf  OP_452.ttl
SHACL/datafiles/IEC61970-453/: DL_453.ttl
SHACL/datafiles/IEC61970-456/: TP_456.rdf
SHACL/datafiles/IEC61970-600-2/: GL_600-2.ttl
SHACL/datafiles/InverseAssocCardinality/: DLinv.ttl  EQBDinv.ttl
SHACL/datafiles/NotSolvedMAS/: SSH_NotSolvedMAS_301UML.rdf  TP_NotSolvedMAS_301UML.ttl
SHACL/datafiles/RDFS/: DiagramLayoutProfile.rdf  DiagramLayoutProfile.ttl  OperationProfile.ttl  ShortCircuitProfile.rdf
SHACL/datafiles/SolvedMAS/: SV_SolvedMAS_301UML.ttl  SolvedMAS_456.rdf  SolvedMAS_600-2.ttl
examples/: callable_module.py  chevron_writer_example.py  custom_attributes.py  writer_example.py
pycgmes/resources/: ACDCConverter.py  ACDCConverterDCTerminal.py  ACDCTerminal.py  ACLineSegment.py  Accumulator.py  AccumulatorLimit.py  AccumulatorLimitSet.py  AccumulatorReset.py  AccumulatorValue.py  ActivePower.py  ActivePowerLimit.py  ActivePowerPerCurrentFlow.py  ActivePowerPerFrequency.py  Analog.py  AnalogControl.py  AnalogLimit.py  AnalogLimitSet.py  AnalogValue.py  AngleDegrees.py  AngleRadians.py  ApparentPower.py  ApparentPowerLimit.py  Area.py  AsynchronousMachine.py  AsynchronousMachineDynamics.py  AsynchronousMachineEquivalentCircuit.py  AsynchronousMachineKind.py  AsynchronousMachineTimeConstantReactance.py  AsynchronousMachineUserDefined.py  AuxiliaryEquipment.py  Base.py  BaseVoltage.py  BasicIntervalSchedule.py  BatteryStateKind.py  BatteryUnit.py  Bay.py  Boolean.py  BoundaryPoint.py  Breaker.py  BusNameMarker.py  (+487 more)
pycgmes/shacl/: __init__.py
pycgmes/shacl/datafiles/Common/: IdentifiedObjecStringLength.rdf  IdentifiedObjecStringLength.ttl
pycgmes/shacl/datafiles/CrossProfileValueType/: DL_453_cp_explicit.rdf  DL_453_cp_implicit.rdf  DL_453_cp_implicit.ttl  DY_457_cp_explicit.rdf  DY_457_cp_implicit.rdf  DY_457_cp_implicit.ttl  GL_13_cp_explicit.rdf  GL_13_cp_explicit.ttl  GL_13_cp_implicit.rdf  OP_452_cp_explicit.rdf  OP_452_cp_implicit.rdf  SC_452_cp.rdf  SV_456_cp_explicit.rdf  (+4 more)
pycgmes/utils/: base.py  config.py  constants.py  dataclassconfig.py  datatypes.py  profile.py  writer.py
sandbox/: EDA_shacl.ipynb  wiki_script.py
sandbox/SHACL/: EDA_shacl.ipynb  SHACL_utils.py
sandbox/example_person/data/: persons.rdf
schemas/cgmes_3_0_0/: FileHeader_RDFS2019.rdf  IEC61970-600-2_CGMES_3_0_0_RDFS2020_DL.rdf  IEC61970-600-2_CGMES_3_0_0_RDFS2020_DY.rdf  IEC61970-600-2_CGMES_3_0_0_RDFS2020_EQ.rdf  IEC61970-600-2_CGMES_3_0_0_RDFS2020_EQBD.rdf  IEC61970-600-2_CGMES_3_0_0_RDFS2020_GL.rdf  IEC61970-600-2_CGMES_3_0_0_RDFS2020_OP.rdf  IEC61970-600-2_CGMES_3_0_0_RDFS2020_SC.rdf  IEC61970-600-2_CGMES_3_0_0_RDFS2020_SSH.rdf  IEC61970-600-2_CGMES_3_0_0_RDFS2020_SV.rdf  IEC61970-600-2_CGMES_3_0_0_RDFS2020_TP.rdf
scripts/: check_indent_rdf.sh  indent_rdf.sh
shacl/: Readme.md  build.md  pyproject.toml
shacl/pycgmes/shacl/: __init__.py
shacl/pycgmes/shacl/datafiles/CrossProfileValueType/: DY_457_cp_explicit.ttl  OP_452_cp_explicit.rdf  OP_452_cp_implicit.ttl  SV_456_cp_explicit.ttl  TP_456_cp_explicit.ttl  TP_456_cp_implicit.ttl
shacl/pycgmes/shacl/datafiles/IEC61968-13/: GL_13.ttl
shacl/pycgmes/shacl/datafiles/IEC61970-301UML/: DL_301UML.ttl
shacl/pycgmes/shacl/datafiles/IEC61970-452/: EQ_452.rdf
shacl/pycgmes/shacl/datafiles/IEC61970-456/: SSH_456.ttl
shacl/pycgmes/shacl/datafiles/IEC61970-600-1/: prof10_header.ttl
shacl/pycgmes/shacl/datafiles/InverseAssocCardinality/: GLinv.ttl  OPinv.rdf
shacl/pycgmes/shacl/datafiles/NotSolvedMAS/: SC_NotSolvedMAS_301UML.ttl  SSH_NotSolvedMAS_456.rdf
shacl/pycgmes/shacl/datafiles/RDFS/: GeographicalLocationProfile.ttl
tests/: test_base.py  test_bay.py  test_chevron_writer.py  test_custom_attrs.py  test_custom_chevron_writer.py  test_custom_profile.py  test_custom_writer.py  test_init.py  test_json_dump.py  test_load_all.py  test_profile.py  test_shacl.py  test_writer.py
(+92 files in other folders)
