[tool.poetry]
name = "pycgmes-shacl"
# Note that trying to reupload the same version will fail.
version = "0.9.10"
description = "Python dataclasses for CGMES 3.0.0"
authors = ["uno <uno@alliander.com>"]
# readme = "README.md"
repository = "https://github.com/Alliander/cgmes-python"
license = "Could be open source, right? I like MIT."
classifiers = [
    # I had fun going through https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AWS CDK :: 2",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    # "License :: OSI Approved :: MIT License",
]

include = ["./pycgmes"]
packages = [{ "include" = "__init__.py", from = "pycgmes/SHACL" }]


[tool.poetry.dependencies]
python = "^3.10"
poetry = ">=1.5.0" # key 'priority' in source
pyshacl = "*"


[build-system]
# Used for building package from poetry. Present by default, not actually used.
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
